force-app/main/default/objects/CommercientSF__ArPermReprint__c/CommercientSF__ArPermReprint__c.object-meta.xml
<CustomObject>
    <description>Syspro ArPermReprint Table</description>
    <label>Syspro Permanent Entry Invoice</label>
    <nameField>
        <label>Syspro Permanent Entry Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Permanent Entry Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>