force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__Account__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ArPermReprint</relationshipName>
    <type>Lookup</type>
</CustomField>