force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__CanGstCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CanGstCode__c</fullName>
    <label>Gst code (A-H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>