force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__CostValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CostValue__c</fullName>
    <label>Cost amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>