force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__DayOfMthRel__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DayOfMthRel__c</fullName>
    <label>Day of month for release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>