force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__EntryDescription__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EntryDescription__c</fullName>
    <label>Entry description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>