force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__EntryType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__EntryType__c</fullName>
    <label>Entry type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>