force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExpiryDate__c</fullName>
    <label>Expiry date</label>
    <type>Date</type>
</CustomField>