force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__ForeignTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignTaxCode__c</fullName>
    <label>Tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>