force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__ForeignTaxVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignTaxVal__c</fullName>
    <label>Foreign tax value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>