force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__FreqOfTransfer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FreqOfTransfer__c</fullName>
    <label>Frequency of transfer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>