force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__FstCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FstCode__c</fullName>
    <label>FST tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>