force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__FstTaxRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FstTaxRate__c</fullName>
    <label>FST tax rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>