force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__FstTaxVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FstTaxVal__c</fullName>
    <label>FST tax value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>