force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__InvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceValue__c</fullName>
    <label>Invoice amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>