force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__NextPostMmyy__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextPostMmyy__c</fullName>
    <label>Start/next posting date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>