force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__OrigDiscValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrigDiscValue__c</fullName>
    <label>Original discount amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>