force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__OrigInvValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrigInvValue__c</fullName>
    <label>Original invoice value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>