force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__PostedFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PostedFlag__c</fullName>
    <label>Posted flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>