force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__Reference__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>