force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxCode__c</fullName>
    <label>Tax code (A-H or blank)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>