force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__TaxRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxRate__c</fullName>
    <label>Tax rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>