force-app/main/default/objects/CommercientSF__ArPermReprint__c/fields/CommercientSF__TempTaxRate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TempTaxRate__c</fullName>
    <label>Temporary tax rate</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>